--- a/templates/django_msal/landing.html
+++ b/templates/django_msal/landing.html
@@ -3,34 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
-    <style>
-      .logo {
-        width: 150px;
-      }
-    </style>
 </head>
 <body>
-  <div class="bg-gray-50">
-    <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-      <h2 class="text-3xl leading-9 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10">
-        Welcome {{ name }}
-        <br />
-        <span class="text-blue-600">Start using DAI Collect
-        </span>
-      </h2>
-      <div class="mt-8 flex lg:flex-shrink-0 lg:mt-0">
-        <div class="inline-flex rounded-md shadow">
-          <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
-            Get started
-          </a>
-        </div>
-        <div class="ml-3 inline-flex rounded-md shadow">
-          <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-blue-600 bg-white hover:text-blue-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
-            Learn more
-          </a>
+  <div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
+      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+        <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+          <h2 class="mt-6 text-3xl leading-9 font-extrabold text-gray-900">
+            Welcome {{ name }}
+          </h2>
+          <p class="mt-2 text-md leading-5 text-gray-900 max-w">
+            You are signed into {{ app_name }} as <b>{{ preferred_username }}</b>
+          </p>
         </div>
       </div>
     </div>
-  </div>
 </body>
 </html>
