add README details for option to allod Django users. Removed tech details from password_area_removed template

--- a/templates/django_msal/password_area_removed.html
+++ b/templates/django_msal/password_area_removed.html
@@ -2,8 +2,5 @@
 
 {% block content %}
 <h1>Password Reset Not available</h1>
-<p>This site is using the django_msal app which replaces the normal Django authentication with
-    authentication through Microsoft Azure Active Direcory. Therefore the ability to reset a user password is
-    not available via the Django app.
-</p>
+<p>This site is does not allow a user password to reset their password as it uses Single Sign On (SSO) functionality. Please reset your password with your SSO provider.</p>
 {% endblock %}
